--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,5 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  general:
+    sign_in_with_facebook: "Sign in with Facebook"
