--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,7 @@ en:
     search_field:
       search_field:
         search: "Search: i.e. UPLB, Diliman, sparks"
+    asker:
+      posted: "Posted "
+      ago: "%{time_ago} ago<br>" 
+      by: "by"
